[project]
name = "ComfyUI-Bori-JsonSetGetCleaner"
description = "This is a custom node for ComfyUI that takes in a file path full of json's and finds the kjnode set and get nodes and makes them hard links."
version = "0.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/boricuapab/ComfyUI-Bori-JsonSetGetCleaner"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "boriNodes"
DisplayName = "ComfyUI-Bori-JsonSetGetCleaner"
Icon = ""
includes = []
